syntax = "proto3";
package cross.core.atomic.tpc;

import "gogoproto/gogo.proto";
import "cross/core/tx/types.proto";
import "cross/core/atomic/types.proto";

option go_package = "github.com/datachainlab/cross/x/core/atomic/protocol/tpc/types";
option (gogoproto.goproto_getters_all)  = false;

message PacketDataPrepare {
  option (gogoproto.equal) = false;

  bytes tx_id  = 1 [(gogoproto.casttype) = "github.com/datachainlab/cross/x/core/tx/types.TxID"];
  uint32 tx_index = 2 [(gogoproto.casttype) = "github.com/datachainlab/cross/x/core/tx/types.TxIndex"];
  cross.core.tx.ResolvedContractTransaction tx = 3 [(gogoproto.nullable) = false];
}

message PacketAcknowledgementPrepare {
  option (gogoproto.equal) = false;

  cross.core.atomic.PrepareResult result = 1;
}

message PacketDataCommit {
  option (gogoproto.equal) = false;

  bytes tx_id  = 1 [(gogoproto.casttype) = "github.com/datachainlab/cross/x/core/tx/types.TxID"];
  uint32 tx_index = 2 [(gogoproto.casttype) = "github.com/datachainlab/cross/x/core/tx/types.TxIndex"];
  bool is_committable = 3;
}

message PacketAcknowledgementCommit {
  option (gogoproto.equal) = false;

  CommitStatus status = 1;
  string error_message = 2;
}

enum CommitStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  COMMIT_STATUS_UNKNOWN = 0;
  COMMIT_STATUS_OK      = 1;
  COMMIT_STATUS_FAILED  = 2;
}
